test/errors/stmt_assign_star_rhs.py
with_stat=* 2
