test/errors/stmt_assign_star_rhs.py.expected
test/errors/stmt_assign_star_rhs.py:2 error: starred expression not allowed here
